k8s/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-be-assinaturas
  namespace: apps-space
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths: 
        - path: /assinatura/(.*)
          pathType: Prefix
          backend:
            service:              
              name: svc-assinaturas
              port:
                number: 80
    - http:
        paths: 
        - path: /autorizacao/(.*)
          pathType: Prefix
          backend:
            service:              
              name: svc-autorizacao
              port:
                number: 80
    - http:
        paths: 
        - path: /catalogo/(.*)
          pathType: Prefix
          backend:
            service:              
              name: svc-catalogo
              port:
                number: 80
